MODON MRE BPDEV/force-app/main/default/objects/UAEPassAutoLinkRule__c/UAEPassAutoLinkRule__c.object-meta.xml
<CustomObject>
    <label>UAEPassAutoLinkRule</label>
    <nameField>
        <displayFormat>UAE-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UAEPassAutoLinkRule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>