MODON MRE BPDEV/force-app/main/default/objects/UAEPassAutoLinkRule__c/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerEmail</label>
    <type>Text</type>
</CustomField>