MODON MRE BPDEV/force-app/main/default/objects/UAEPassAutoLinkRule__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MobilePhone</label>
    <type>Phone</type>
</CustomField>