MODON MRE BPDEV/force-app/main/default/objects/UAEPassAutoLinkRule__c/fields/UUId__c.field-meta.xml
<CustomField>
    <fullName>UUId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UUId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>